--- a/msdos_np21.vcproj
+++ b/msdos_np21.vcproj
@@ -1213,6 +1213,98 @@
 								</FileConfiguration>
 							</File>
 						</Filter>
+						<Filter
+							Name="sse4"
+							>
+							<File
+								RelativePath="np21_i386c\ia32\instructions\sse4\sse4_1.cpp"
+								>
+								<FileConfiguration
+									Name="Debug|Win32"
+									>
+									<Tool
+										Name="VCCLCompilerTool"
+										PreprocessorDefinitions=""
+									/>
+								</FileConfiguration>
+								<FileConfiguration
+									Name="Release|Win32"
+									>
+									<Tool
+										Name="VCCLCompilerTool"
+										PreprocessorDefinitions=""
+									/>
+								</FileConfiguration>
+							</File>
+							<File
+								RelativePath="np21_i386c\ia32\instructions\sse4\sse4_2.cpp"
+								>
+								<FileConfiguration
+									Name="Debug|Win32"
+									>
+									<Tool
+										Name="VCCLCompilerTool"
+										PreprocessorDefinitions=""
+									/>
+								</FileConfiguration>
+								<FileConfiguration
+									Name="Release|Win32"
+									>
+									<Tool
+										Name="VCCLCompilerTool"
+										PreprocessorDefinitions=""
+									/>
+								</FileConfiguration>
+							</File>
+						</Filter>
+						<Filter
+							Name="sse4a"
+							>
+							<File
+								RelativePath="np21_i386c\ia32\instructions\sse4a\sse4a.cpp"
+								>
+								<FileConfiguration
+									Name="Debug|Win32"
+									>
+									<Tool
+										Name="VCCLCompilerTool"
+										PreprocessorDefinitions=""
+									/>
+								</FileConfiguration>
+								<FileConfiguration
+									Name="Release|Win32"
+									>
+									<Tool
+										Name="VCCLCompilerTool"
+										PreprocessorDefinitions=""
+									/>
+								</FileConfiguration>
+							</File>
+						</Filter>
+						<Filter
+							Name="ssse3"
+							>
+							<File
+								RelativePath="np21_i386c\ia32\instructions\ssse3\ssse3.cpp"
+								>
+								<FileConfiguration
+									Name="Debug|Win32"
+									>
+									<Tool
+										Name="VCCLCompilerTool"
+										PreprocessorDefinitions=""
+									/>
+								</FileConfiguration>
+								<FileConfiguration
+									Name="Release|Win32"
+									>
+									<Tool
+										Name="VCCLCompilerTool"
+										PreprocessorDefinitions=""
+									/>
+								</FileConfiguration>
+							</File>
+						</Filter>
 					</Filter>
 				</Filter>
 			</Filter>
@@ -1384,6 +1476,34 @@
 						>
 						<File
 							RelativePath="np21_i386c\ia32\instructions\sse3\sse3.h"
+							>
+						</File>
+					</Filter>
+					<Filter
+						Name="sse4"
+						>
+						<File
+							RelativePath="np21_i386c\ia32\instructions\sse4\sse4_1.h"
+							>
+						</File>
+						<File
+							RelativePath="np21_i386c\ia32\instructions\sse4\sse4_2.h"
+							>
+						</File>
+					</Filter>
+					<Filter
+						Name="sse4a"
+						>
+						<File
+							RelativePath="np21_i386c\ia32\instructions\sse4a\sse4a.h"
+							>
+						</File>
+					</Filter>
+					<Filter
+						Name="ssse3"
+						>
+						<File
+							RelativePath="np21_i386c\ia32\instructions\ssse3\ssse3.h"
 							>
 						</File>
 					</Filter>
