--- a/msdos_np21.vcxproj
+++ b/msdos_np21.vcxproj
@@ -315,6 +315,10 @@
     <ClCompile Include="np21_i386c\ia32\instructions\sse\sse.cpp" />
     <ClCompile Include="np21_i386c\ia32\instructions\sse2\sse2.cpp" />
     <ClCompile Include="np21_i386c\ia32\instructions\sse3\sse3.cpp" />
+    <ClCompile Include="np21_i386c\ia32\instructions\sse4\sse4_1.cpp" />
+    <ClCompile Include="np21_i386c\ia32\instructions\sse4\sse4_2.cpp" />
+    <ClCompile Include="np21_i386c\ia32\instructions\sse4a\sse4a.cpp" />
+    <ClCompile Include="np21_i386c\ia32\instructions\ssse3\ssse3.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h" />
@@ -351,6 +355,10 @@
     <ClInclude Include="np21_i386c\ia32\instructions\sse\sse.h" />
     <ClInclude Include="np21_i386c\ia32\instructions\sse2\sse2.h" />
     <ClInclude Include="np21_i386c\ia32\instructions\sse3\sse3.h" />
+    <ClInclude Include="np21_i386c\ia32\instructions\sse4\sse4_1.h" />
+    <ClInclude Include="np21_i386c\ia32\instructions\sse4\sse4_2.h" />
+    <ClInclude Include="np21_i386c\ia32\instructions\sse4a\sse4a.h" />
+    <ClInclude Include="np21_i386c\ia32\instructions\ssse3\sses3.h" />
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="vista.manifest" />
